# wordplay-solver

./: .gitignore  README.md  example_config.ini  pyproject.toml  test_solver.py  windsurf_rules.md  wordplay_solver.py
src/wordplay_solver/: __init__.py  __main__.py  dictionary.py  scoring.py  screen_capture.py  solver.py
